book: update fr
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/fr/v2/Commandes-Git-Installation-et-configuration.html
+++ b/external/book/content/book/fr/v2/Commandes-Git-Installation-et-configuration.html
@@ -16,6 +16,9 @@ book:
     previous: book/fr/v2/Annexe-B:-Embarquer-Git-dans-vos-applications-Dulwich
     next: book/fr/v2/Commandes-Git-Obtention-et-création-des-projets
 title: Git - Installation et configuration
+aliases:
+- "/book/fr/commands.html"
+- "/book/fr/v1/commands.html"
 ---
 <p>Tout au long du livre, nous avons introduit des dizaines de commandes Git et avons essayé le plus possible de les introduire de manière narrative, en ajoutant progressivement des commandes dans l’histoire.
 Cependant, cela nous laisse avec des exemples d’utilisation des commandes quelque peu dispersés tout au long du livre.</p><p>Dans cette annexe, nous allons revoir toutes les commandes Git qui se trouvent dans le livre, regroupées à peu près par leur usage.
