--- a/external/book/content/book/fr/v2/Démarrage-rapide-Obtenir-de-l’aide.html
+++ b/external/book/content/book/fr/v2/Démarrage-rapide-Obtenir-de-l’aide.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Démarrage-rapide-Résumé
 title: Git - Obtenir de l’aide
 url: "/book/fr/v2/Démarrage-rapide-Obtenir-de-l’aide.html"
+aliases:
+- "/book/fr/Démarrage-rapide-Obtenir-de-l-aide.html"
+- "/book/fr/v1/Démarrage-rapide-Obtenir-de-l-aide.html"
 ---
 <h2 id="s_git_help">Obtenir de l’aide</h2>
 <div class="paragraph">
