--- a/external/book/content/book/fr/v2/Démarrage-rapide-Paramétrage-à-la-première-utilisation-de-Git.html
+++ b/external/book/content/book/fr/v2/Démarrage-rapide-Paramétrage-à-la-première-utilisation-de-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Démarrage-rapide-Obtenir-de-l’aide
 title: Git - Paramétrage à la première utilisation de Git
 url: "/book/fr/v2/Démarrage-rapide-Paramétrage-à-la-première-utilisation-de-Git.html"
+aliases:
+- "/book/fr/Démarrage-rapide-Paramétrage-à-la-première-utilisation-de-Git.html"
+- "/book/fr/v1/Démarrage-rapide-Paramétrage-à-la-première-utilisation-de-Git.html"
 ---
 <h2 id="s_first_time">Paramétrage à la première utilisation de Git</h2>
 <div class="paragraph">
