--- a/external/book/content/book/fr/v2/Démarrage-rapide-Rudiments-de-Git.html
+++ b/external/book/content/book/fr/v2/Démarrage-rapide-Rudiments-de-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Démarrage-rapide-La-ligne-de-commande
 title: Git - Rudiments de Git
 url: "/book/fr/v2/Démarrage-rapide-Rudiments-de-Git.html"
+aliases:
+- "/book/fr/Démarrage-rapide-Rudiments-de-Git.html"
+- "/book/fr/v1/Démarrage-rapide-Rudiments-de-Git.html"
 ---
 <h2 id="_rudiments_de_git">Rudiments de Git</h2>
 <div class="paragraph">
