--- a/external/book/content/book/fr/v2/Démarrage-rapide-Résumé.html
+++ b/external/book/content/book/fr/v2/Démarrage-rapide-Résumé.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Les-bases-de-Git-Démarrer-un-dépôt-Git
 title: Git - Résumé
 url: "/book/fr/v2/Démarrage-rapide-Résumé.html"
+aliases:
+- "/book/fr/Démarrage-rapide-Résumé.html"
+- "/book/fr/v1/Démarrage-rapide-Résumé.html"
 ---
 <h2 id="_résumé">Résumé</h2>
 <div class="paragraph">
