--- a/external/book/content/book/fr/v2/Démarrage-rapide-À-propos-de-la-gestion-de-version.html
+++ b/external/book/content/book/fr/v2/Démarrage-rapide-À-propos-de-la-gestion-de-version.html
@@ -17,6 +17,11 @@ book:
     next: book/fr/v2/Démarrage-rapide-Une-rapide-histoire-de-Git
 title: Git - À propos de la gestion de version
 url: "/book/fr/v2/Démarrage-rapide-À-propos-de-la-gestion-de-version.html"
+aliases:
+- "/book/fr/Démarrage-rapide.html"
+- "/book/fr/v1/Démarrage-rapide.html"
+- "/book/fr/Démarrage-rapide-À-propos-de-la-gestion-de-version.html"
+- "/book/fr/v1/Démarrage-rapide-À-propos-de-la-gestion-de-version.html"
 ---
 <p>Ce chapitre traite du démarrage rapide avec Git.
 Nous commencerons par expliquer les bases de la gestion de version, puis nous parlerons de l’installation de Git sur votre système et finalement du paramétrage pour commencer à l’utiliser.
