--- a/external/book/content/book/fr/v2/Git-distribué-Contribution-à-un-projet.html
+++ b/external/book/content/book/fr/v2/Git-distribué-Contribution-à-un-projet.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Git-distribué-Maintenance-d’un-projet
 title: Git - Contribution à un projet
 url: "/book/fr/v2/Git-distribué-Contribution-à-un-projet.html"
+aliases:
+- "/book/fr/Git-distribué-Contribution-à-un-projet.html"
+- "/book/fr/v1/Git-distribué-Contribution-à-un-projet.html"
 ---
 <h2 id="s_contributing_project">Contribution à un projet</h2>
 <div class="paragraph">
