--- a/external/book/content/book/fr/v2/Git-distribué-Développements-distribués.html
+++ b/external/book/content/book/fr/v2/Git-distribué-Développements-distribués.html
@@ -17,6 +17,11 @@ book:
     next: book/fr/v2/Git-distribué-Contribution-à-un-projet
 title: Git - Développements distribués
 url: "/book/fr/v2/Git-distribué-Développements-distribués.html"
+aliases:
+- "/book/fr/Git-distribué.html"
+- "/book/fr/v1/Git-distribué.html"
+- "/book/fr/Git-distribué-Développements-distribués.html"
+- "/book/fr/v1/Git-distribué-Développements-distribués.html"
 ---
 <p>
 Avec un dépôt distant Git mis en place pour permettre à tous les développeurs de partager leur code, et la connaissance des commandes de base de Git pour une gestion locale, abordons les méthodes de gestion distribuée que Git nous offre.</p><p>Dans ce chapitre, vous découvrirez comment travailler dans un environnement distribué avec Git en tant que contributeur ou comme intégrateur.
