--- a/external/book/content/book/fr/v2/Git-distribué-Maintenance-d’un-projet.html
+++ b/external/book/content/book/fr/v2/Git-distribué-Maintenance-d’un-projet.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Git-distribué-Résumé
 title: Git - Maintenance d’un projet
 url: "/book/fr/v2/Git-distribué-Maintenance-d’un-projet.html"
+aliases:
+- "/book/fr/Git-distribué-Maintenance-d-un-projet.html"
+- "/book/fr/v1/Git-distribué-Maintenance-d-un-projet.html"
 ---
 <h2 id="_maintenance_dun_projet">Maintenance d’un projet</h2>
 <div class="paragraph">
