--- a/external/book/content/book/fr/v2/Git-et-les-autres-systèmes-Git-comme-client.html
+++ b/external/book/content/book/fr/v2/Git-et-les-autres-systèmes-Git-comme-client.html
@@ -17,6 +17,11 @@ book:
     next: book/fr/v2/Git-et-les-autres-systèmes-Migration-vers-Git
 title: Git - Git comme client
 url: "/book/fr/v2/Git-et-les-autres-systèmes-Git-comme-client.html"
+aliases:
+- "/book/fr/Git-et-les-autres-systèmes.html"
+- "/book/fr/v1/Git-et-les-autres-systèmes.html"
+- "/book/fr/Git-et-les-autres-systèmes-Git-et-Subversion.html"
+- "/book/fr/v1/Git-et-les-autres-systèmes-Git-et-Subversion.html"
 ---
 <p>Le monde n’est pas parfait.
 Habituellement, vous ne pouvez pas basculer immédiatement sous Git tous les projets que vous pourriez rencontrer.
