--- a/external/book/content/book/fr/v2/Git-et-les-autres-systèmes-Migration-vers-Git.html
+++ b/external/book/content/book/fr/v2/Git-et-les-autres-systèmes-Migration-vers-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Git-et-les-autres-systèmes-Résumé
 title: Git - Migration vers Git
 url: "/book/fr/v2/Git-et-les-autres-systèmes-Migration-vers-Git.html"
+aliases:
+- "/book/fr/Git-et-les-autres-systèmes-Migrer-sur-Git.html"
+- "/book/fr/v1/Git-et-les-autres-systèmes-Migrer-sur-Git.html"
 ---
 <h2 id="s_migrating">Migration vers Git</h2>
 <div class="paragraph">
