--- a/external/book/content/book/fr/v2/Git-et-les-autres-systèmes-Résumé.html
+++ b/external/book/content/book/fr/v2/Git-et-les-autres-systèmes-Résumé.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Les-tripes-de-Git-Plomberie-et-porcelaine
 title: Git - Résumé
 url: "/book/fr/v2/Git-et-les-autres-systèmes-Résumé.html"
+aliases:
+- "/book/fr/Git-et-les-autres-systèmes-Résumé.html"
+- "/book/fr/v1/Git-et-les-autres-systèmes-Résumé.html"
 ---
 <h2 id="_résumé_12">Résumé</h2>
 <div class="paragraph">
