--- a/external/book/content/book/fr/v2/Git-sur-le-serveur-Démon-Daemon-Git.html
+++ b/external/book/content/book/fr/v2/Git-sur-le-serveur-Démon-Daemon-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Git-sur-le-serveur-HTTP-intelligent
 title: Git - Démon (Daemon) Git
 url: "/book/fr/v2/Git-sur-le-serveur-Démon-Daemon-Git.html"
+aliases:
+- "/book/fr/Git-sur-le-serveur-Le-<em>daemon</em>-Git.html"
+- "/book/fr/v1/Git-sur-le-serveur-Le-<em>daemon</em>-Git.html"
 ---
 <h2 id="_démon_daemon_git">Démon (<em>Daemon</em>) Git</h2>
 <div class="paragraph">
