--- a/external/book/content/book/fr/v2/Git-sur-le-serveur-Git-hébergé.html
+++ b/external/book/content/book/fr/v2/Git-sur-le-serveur-Git-hébergé.html
@@ -17,6 +17,17 @@ book:
     next: book/fr/v2/Git-sur-le-serveur-Résumé
 title: Git - Git hébergé
 url: "/book/fr/v2/Git-sur-le-serveur-Git-hébergé.html"
+aliases:
+- "/book/fr/Git-sur-le-serveur-Accès-public.html"
+- "/book/fr/v1/Git-sur-le-serveur-Accès-public.html"
+- "/book/fr/Git-sur-le-serveur-GitWeb.html"
+- "/book/fr/v1/Git-sur-le-serveur-GitWeb.html"
+- "/book/fr/Git-sur-le-serveur-Gitosis.html"
+- "/book/fr/v1/Git-sur-le-serveur-Gitosis.html"
+- "/book/fr/Git-sur-le-serveur-Gitolite.html"
+- "/book/fr/v1/Git-sur-le-serveur-Gitolite.html"
+- "/book/fr/Git-sur-le-serveur-Git-hébergé.html"
+- "/book/fr/v1/Git-sur-le-serveur-Git-hébergé.html"
 ---
 <h2 id="_git_hébergé">Git hébergé</h2>
 <div class="paragraph">
