--- a/external/book/content/book/fr/v2/Git-sur-le-serveur-Génération-des-clés-publiques-SSH.html
+++ b/external/book/content/book/fr/v2/Git-sur-le-serveur-Génération-des-clés-publiques-SSH.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Git-sur-le-serveur-Mise-en-place-du-serveur
 title: Git - Génération des clés publiques SSH
 url: "/book/fr/v2/Git-sur-le-serveur-Génération-des-clés-publiques-SSH.html"
+aliases:
+- "/book/fr/Git-sur-le-serveur-Génération-des-clés-publiques-SSH.html"
+- "/book/fr/v1/Git-sur-le-serveur-Génération-des-clés-publiques-SSH.html"
 ---
 <h2 id="s_generate_ssh_key">Génération des clés publiques SSH</h2>
 <div class="paragraph">
