--- a/external/book/content/book/fr/v2/Git-sur-le-serveur-Installation-de-Git-sur-un-serveur.html
+++ b/external/book/content/book/fr/v2/Git-sur-le-serveur-Installation-de-Git-sur-un-serveur.html
@@ -16,6 +16,9 @@ book:
     previous: book/fr/v2/Git-sur-le-serveur-Protocoles
     next: book/fr/v2/Git-sur-le-serveur-Génération-des-clés-publiques-SSH
 title: Git - Installation de Git sur un serveur
+aliases:
+- "/book/fr/Git-sur-le-serveur-Installation-de-Git-sur-un-serveur.html"
+- "/book/fr/v1/Git-sur-le-serveur-Installation-de-Git-sur-un-serveur.html"
 ---
 <h2 id="s_git_on_the_server">Installation de Git sur un serveur</h2>
 <div class="paragraph">
