--- a/external/book/content/book/fr/v2/Git-sur-le-serveur-Mise-en-place-du-serveur.html
+++ b/external/book/content/book/fr/v2/Git-sur-le-serveur-Mise-en-place-du-serveur.html
@@ -16,6 +16,9 @@ book:
     previous: book/fr/v2/Git-sur-le-serveur-Génération-des-clés-publiques-SSH
     next: book/fr/v2/Git-sur-le-serveur-Démon-Daemon-Git
 title: Git - Mise en place du serveur
+aliases:
+- "/book/fr/Git-sur-le-serveur-Mise-en-place-du-serveur.html"
+- "/book/fr/v1/Git-sur-le-serveur-Mise-en-place-du-serveur.html"
 ---
 <h2 id="s_setting_up_server">Mise en place du serveur</h2>
 <div class="paragraph">
