--- a/external/book/content/book/fr/v2/Git-sur-le-serveur-Protocoles.html
+++ b/external/book/content/book/fr/v2/Git-sur-le-serveur-Protocoles.html
@@ -16,6 +16,11 @@ book:
     previous: book/fr/v2/Les-branches-avec-Git-Résumé
     next: book/fr/v2/Git-sur-le-serveur-Installation-de-Git-sur-un-serveur
 title: Git - Protocoles
+aliases:
+- "/book/fr/Git-sur-le-serveur.html"
+- "/book/fr/v1/Git-sur-le-serveur.html"
+- "/book/fr/Git-sur-le-serveur-Protocoles.html"
+- "/book/fr/v1/Git-sur-le-serveur-Protocoles.html"
 ---
 <p>
 À présent, vous devriez être capable de réaliser la plupart des tâches quotidiennes impliquant Git.
