--- a/external/book/content/book/fr/v2/Git-sur-le-serveur-Résumé.html
+++ b/external/book/content/book/fr/v2/Git-sur-le-serveur-Résumé.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Git-distribué-Développements-distribués
 title: Git - Résumé
 url: "/book/fr/v2/Git-sur-le-serveur-Résumé.html"
+aliases:
+- "/book/fr/Git-sur-le-serveur-Résumé.html"
+- "/book/fr/v1/Git-sur-le-serveur-Résumé.html"
 ---
 <h2 id="_résumé_4">Résumé</h2>
 <div class="paragraph">
