--- a/external/book/content/book/fr/v2/Les-bases-de-Git-Annuler-des-actions.html
+++ b/external/book/content/book/fr/v2/Les-bases-de-Git-Annuler-des-actions.html
@@ -16,6 +16,9 @@ book:
     previous: book/fr/v2/Les-bases-de-Git-Visualiser-l’historique-des-validations
     next: book/fr/v2/Les-bases-de-Git-Travailler-avec-des-dépôts-distants
 title: Git - Annuler des actions
+aliases:
+- "/book/fr/Les-bases-de-Git-Annuler-des-actions.html"
+- "/book/fr/v1/Les-bases-de-Git-Annuler-des-actions.html"
 ---
 <h2 id="s_undoing">Annuler des actions</h2>
 <div class="paragraph">
