--- a/external/book/content/book/fr/v2/Les-bases-de-Git-Enregistrer-des-modifications-dans-le-dépôt.html
+++ b/external/book/content/book/fr/v2/Les-bases-de-Git-Enregistrer-des-modifications-dans-le-dépôt.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Les-bases-de-Git-Visualiser-l’historique-des-validations
 title: Git - Enregistrer des modifications dans le dépôt
 url: "/book/fr/v2/Les-bases-de-Git-Enregistrer-des-modifications-dans-le-dépôt.html"
+aliases:
+- "/book/fr/Les-bases-de-Git-Enregistrer-des-modifications-dans-le-dépôt.html"
+- "/book/fr/v1/Les-bases-de-Git-Enregistrer-des-modifications-dans-le-dépôt.html"
 ---
 <h2 id="_enregistrer_des_modifications_dans_le_dépôt">Enregistrer des modifications dans le dépôt</h2>
 <div class="paragraph">
