--- a/external/book/content/book/fr/v2/Les-bases-de-Git-Résumé.html
+++ b/external/book/content/book/fr/v2/Les-bases-de-Git-Résumé.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Les-branches-avec-Git-Les-branches-en-bref
 title: Git - Résumé
 url: "/book/fr/v2/Les-bases-de-Git-Résumé.html"
+aliases:
+- "/book/fr/Les-bases-de-Git-Résumé.html"
+- "/book/fr/v1/Les-bases-de-Git-Résumé.html"
 ---
 <h2 id="_résumé_2">Résumé</h2>
 <div class="paragraph">
