--- a/external/book/content/book/fr/v2/Les-bases-de-Git-Travailler-avec-des-dépôts-distants.html
+++ b/external/book/content/book/fr/v2/Les-bases-de-Git-Travailler-avec-des-dépôts-distants.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Les-bases-de-Git-Étiquetage
 title: Git - Travailler avec des dépôts distants
 url: "/book/fr/v2/Les-bases-de-Git-Travailler-avec-des-dépôts-distants.html"
+aliases:
+- "/book/fr/Les-bases-de-Git-Travailler-avec-des-dépôts-distants.html"
+- "/book/fr/v1/Les-bases-de-Git-Travailler-avec-des-dépôts-distants.html"
 ---
 <h2 id="s_remote_repos">Travailler avec des dépôts distants</h2>
 <div class="paragraph">
