--- a/external/book/content/book/fr/v2/Les-bases-de-Git-Visualiser-l’historique-des-validations.html
+++ b/external/book/content/book/fr/v2/Les-bases-de-Git-Visualiser-l’historique-des-validations.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Les-bases-de-Git-Annuler-des-actions
 title: Git - Visualiser l’historique des validations
 url: "/book/fr/v2/Les-bases-de-Git-Visualiser-l’historique-des-validations.html"
+aliases:
+- "/book/fr/Les-bases-de-Git-Visualiser-l-historique-des-validations.html"
+- "/book/fr/v1/Les-bases-de-Git-Visualiser-l-historique-des-validations.html"
 ---
 <h2 id="s_viewing_history">Visualiser l’historique des validations</h2>
 <div class="paragraph">
