--- a/external/book/content/book/fr/v2/Les-bases-de-Git-Étiquetage.html
+++ b/external/book/content/book/fr/v2/Les-bases-de-Git-Étiquetage.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Les-bases-de-Git-Les-alias-Git
 title: Git - Étiquetage
 url: "/book/fr/v2/Les-bases-de-Git-Étiquetage.html"
+aliases:
+- "/book/fr/Les-bases-de-Git-Étiquetage.html"
+- "/book/fr/v1/Les-bases-de-Git-Étiquetage.html"
 ---
 <h2 id="s_git_tagging">Étiquetage</h2>
 <div class="paragraph">
