--- a/external/book/content/book/fr/v2/Les-branches-avec-Git-Branches-de-suivi-à-distance.html
+++ b/external/book/content/book/fr/v2/Les-branches-avec-Git-Branches-de-suivi-à-distance.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Les-branches-avec-Git-Rebaser-Rebasing
 title: Git - Branches de suivi à distance
 url: "/book/fr/v2/Les-branches-avec-Git-Branches-de-suivi-à-distance.html"
+aliases:
+- "/book/fr/Les-branches-avec-Git-Les-branches-distantes.html"
+- "/book/fr/v1/Les-branches-avec-Git-Les-branches-distantes.html"
 ---
 <h2 id="s_remote_branches">Branches de suivi à distance</h2>
 <div class="paragraph">
