--- a/external/book/content/book/fr/v2/Les-branches-avec-Git-Branches-et-fusions :-les-bases.html
+++ b/external/book/content/book/fr/v2/Les-branches-avec-Git-Branches-et-fusions :-les-bases.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Les-branches-avec-Git-Gestion-des-branches
 title: 'Git - Branches et fusions : les bases'
 url: "/book/fr/v2/Les-branches-avec-Git-Branches-et-fusions :-les-bases.html"
+aliases:
+- "/book/fr/Les-branches-avec-Git-Brancher-et-fusionner :-les-bases.html"
+- "/book/fr/v1/Les-branches-avec-Git-Brancher-et-fusionner :-les-bases.html"
 ---
 <h2 id="_branches_et_fusions_les_bases">Branches et fusions : les bases</h2>
 <div class="paragraph">
