--- a/external/book/content/book/fr/v2/Les-branches-avec-Git-Gestion-des-branches.html
+++ b/external/book/content/book/fr/v2/Les-branches-avec-Git-Gestion-des-branches.html
@@ -16,6 +16,9 @@ book:
     previous: book/fr/v2/Les-branches-avec-Git-Branches-et-fusions :-les-bases
     next: book/fr/v2/Les-branches-avec-Git-Travailler-avec-les-branches
 title: Git - Gestion des branches
+aliases:
+- "/book/fr/Les-branches-avec-Git-Gestion-de-branches.html"
+- "/book/fr/v1/Les-branches-avec-Git-Gestion-de-branches.html"
 ---
 <h2 id="s_branch_management">Gestion des branches</h2>
 <div class="paragraph">
