--- a/external/book/content/book/fr/v2/Les-branches-avec-Git-Les-branches-en-bref.html
+++ b/external/book/content/book/fr/v2/Les-branches-avec-Git-Les-branches-en-bref.html
@@ -16,6 +16,11 @@ book:
     previous: book/fr/v2/Les-bases-de-Git-Résumé
     next: book/fr/v2/Les-branches-avec-Git-Branches-et-fusions :-les-bases
 title: Git - Les branches en bref
+aliases:
+- "/book/fr/Les-branches-avec-Git.html"
+- "/book/fr/v1/Les-branches-avec-Git.html"
+- "/book/fr/Les-branches-avec-Git-Ce-qu-est-une-branche.html"
+- "/book/fr/v1/Les-branches-avec-Git-Ce-qu-est-une-branche.html"
 ---
 <p>
 Presque tous les VCS proposent une certaine forme de gestion de branches.
