--- a/external/book/content/book/fr/v2/Les-branches-avec-Git-Rebaser-Rebasing.html
+++ b/external/book/content/book/fr/v2/Les-branches-avec-Git-Rebaser-Rebasing.html
@@ -16,6 +16,9 @@ book:
     previous: book/fr/v2/Les-branches-avec-Git-Branches-de-suivi-à-distance
     next: book/fr/v2/Les-branches-avec-Git-Résumé
 title: Git - Rebaser (Rebasing)
+aliases:
+- "/book/fr/Les-branches-avec-Git-Rebaser.html"
+- "/book/fr/v1/Les-branches-avec-Git-Rebaser.html"
 ---
 <h2 id="s_rebasing">Rebaser (<em>Rebasing</em>)</h2>
 <div class="paragraph">
