--- a/external/book/content/book/fr/v2/Les-branches-avec-Git-Résumé.html
+++ b/external/book/content/book/fr/v2/Les-branches-avec-Git-Résumé.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Git-sur-le-serveur-Protocoles
 title: Git - Résumé
 url: "/book/fr/v2/Les-branches-avec-Git-Résumé.html"
+aliases:
+- "/book/fr/Les-branches-avec-Git-Résumé.html"
+- "/book/fr/v1/Les-branches-avec-Git-Résumé.html"
 ---
 <h2 id="_résumé_3">Résumé</h2>
 <div class="paragraph">
