--- a/external/book/content/book/fr/v2/Les-branches-avec-Git-Travailler-avec-les-branches.html
+++ b/external/book/content/book/fr/v2/Les-branches-avec-Git-Travailler-avec-les-branches.html
@@ -16,6 +16,9 @@ book:
     previous: book/fr/v2/Les-branches-avec-Git-Gestion-des-branches
     next: book/fr/v2/Les-branches-avec-Git-Branches-de-suivi-à-distance
 title: Git - Travailler avec les branches
+aliases:
+- "/book/fr/Les-branches-avec-Git-Travailler-avec-les-branches.html"
+- "/book/fr/v1/Les-branches-avec-Git-Travailler-avec-les-branches.html"
 ---
 <h2 id="_travailler_avec_les_branches">Travailler avec les branches</h2>
 <div class="paragraph">
