--- a/external/book/content/book/fr/v2/Les-tripes-de-Git-Fichiers-groupés.html
+++ b/external/book/content/book/fr/v2/Les-tripes-de-Git-Fichiers-groupés.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Les-tripes-de-Git-La-refspec
 title: Git - Fichiers groupés
 url: "/book/fr/v2/Les-tripes-de-Git-Fichiers-groupés.html"
+aliases:
+- "/book/fr/Les-tripes-de-Git-Fichiers-groupés.html"
+- "/book/fr/v1/Les-tripes-de-Git-Fichiers-groupés.html"
 ---
 <h2 id="_fichiers_groupés">Fichiers groupés</h2>
 <div class="paragraph">
