--- a/external/book/content/book/fr/v2/Les-tripes-de-Git-La-refspec.html
+++ b/external/book/content/book/fr/v2/Les-tripes-de-Git-La-refspec.html
@@ -16,6 +16,9 @@ book:
     previous: book/fr/v2/Les-tripes-de-Git-Fichiers-groupés
     next: book/fr/v2/Les-tripes-de-Git-Les-protocoles-de-transfert
 title: Git - La refspec
+aliases:
+- "/book/fr/Les-tripes-de-Git-Les-références-spécifiques.html"
+- "/book/fr/v1/Les-tripes-de-Git-Les-références-spécifiques.html"
 ---
 <h2 id="s_refspec">La <em>refspec</em>
 </h2>
