--- a/external/book/content/book/fr/v2/Les-tripes-de-Git-Les-objets-de-Git.html
+++ b/external/book/content/book/fr/v2/Les-tripes-de-Git-Les-objets-de-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/fr/v2/Les-tripes-de-Git-Plomberie-et-porcelaine
     next: book/fr/v2/Les-tripes-de-Git-Références-Git
 title: Git - Les objets de Git
+aliases:
+- "/book/fr/Les-tripes-de-Git-Les-objets-Git.html"
+- "/book/fr/v1/Les-tripes-de-Git-Les-objets-Git.html"
 ---
 <h2 id="s_objects">Les objets de Git</h2>
 <div class="paragraph">
