--- a/external/book/content/book/fr/v2/Les-tripes-de-Git-Les-protocoles-de-transfert.html
+++ b/external/book/content/book/fr/v2/Les-tripes-de-Git-Les-protocoles-de-transfert.html
@@ -16,6 +16,9 @@ book:
     previous: book/fr/v2/Les-tripes-de-Git-La-refspec
     next: book/fr/v2/Les-tripes-de-Git-Maintenance-et-récupération-de-données
 title: Git - Les protocoles de transfert
+aliases:
+- "/book/fr/Les-tripes-de-Git-Protocoles-de-transfert.html"
+- "/book/fr/v1/Les-tripes-de-Git-Protocoles-de-transfert.html"
 ---
 <h2 id="_les_protocoles_de_transfert">Les protocoles de transfert</h2>
 <div class="paragraph">
