--- a/external/book/content/book/fr/v2/Les-tripes-de-Git-Maintenance-et-récupération-de-données.html
+++ b/external/book/content/book/fr/v2/Les-tripes-de-Git-Maintenance-et-récupération-de-données.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Les-tripes-de-Git-Les-variables-d’environnement
 title: Git - Maintenance et récupération de données
 url: "/book/fr/v2/Les-tripes-de-Git-Maintenance-et-récupération-de-données.html"
+aliases:
+- "/book/fr/Les-tripes-de-Git-Maintenance-et-récupération-de-données.html"
+- "/book/fr/v1/Les-tripes-de-Git-Maintenance-et-récupération-de-données.html"
 ---
 <h2 id="_maintenance_et_récupération_de_données">Maintenance et récupération de données</h2>
 <div class="paragraph">
