--- a/external/book/content/book/fr/v2/Les-tripes-de-Git-Plomberie-et-porcelaine.html
+++ b/external/book/content/book/fr/v2/Les-tripes-de-Git-Plomberie-et-porcelaine.html
@@ -16,6 +16,11 @@ book:
     previous: book/fr/v2/Git-et-les-autres-systèmes-Résumé
     next: book/fr/v2/Les-tripes-de-Git-Les-objets-de-Git
 title: Git - Plomberie et porcelaine
+aliases:
+- "/book/fr/Les-tripes-de-Git.html"
+- "/book/fr/v1/Les-tripes-de-Git.html"
+- "/book/fr/Les-tripes-de-Git-Plomberie-et-porcelaine.html"
+- "/book/fr/v1/Les-tripes-de-Git-Plomberie-et-porcelaine.html"
 ---
 <p>Vous êtes peut-être arrivé à ce chapitre en en sautant certains autres ou après avoir parcouru tout le reste du livre.
 Dans tous les cas, c’est ici que le fonctionnement interne et la mise en œuvre de Git sont abordés.
