--- a/external/book/content/book/fr/v2/Les-tripes-de-Git-Références-Git.html
+++ b/external/book/content/book/fr/v2/Les-tripes-de-Git-Références-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Les-tripes-de-Git-Fichiers-groupés
 title: Git - Références Git
 url: "/book/fr/v2/Les-tripes-de-Git-Références-Git.html"
+aliases:
+- "/book/fr/Les-tripes-de-Git-Références-Git.html"
+- "/book/fr/v1/Les-tripes-de-Git-Références-Git.html"
 ---
 <h2 id="s_git_refs">Références Git</h2>
 <div class="paragraph">
