--- a/external/book/content/book/fr/v2/Les-tripes-de-Git-Résumé.html
+++ b/external/book/content/book/fr/v2/Les-tripes-de-Git-Résumé.html
@@ -17,6 +17,53 @@ book:
     next: book/fr/v2/Annexe-A:-Git-dans-d’autres-environnements-Interfaces-graphiques
 title: Git - Résumé
 url: "/book/fr/v2/Les-tripes-de-Git-Résumé.html"
+aliases:
+- "/book/fr/Les-tripes-de-Git-Résumé.html"
+- "/book/fr/v1/Les-tripes-de-Git-Résumé.html"
+- "/book/fr/Notes-on-the-french-translation-process.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process.html"
+- "/book/fr/Notes-on-the-french-translation-process-Repository.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-Repository.html"
+- "/book/fr/Notes-on-the-french-translation-process-Check-in.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-Check-in.html"
+- "/book/fr/Notes-on-the-french-translation-process-To-check-in.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-To-check-in.html"
+- "/book/fr/Notes-on-the-french-translation-process-Check-out.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-Check-out.html"
+- "/book/fr/Notes-on-the-french-translation-process-To-check-out.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-To-check-out.html"
+- "/book/fr/Notes-on-the-french-translation-process-To-commit.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-To-commit.html"
+- "/book/fr/Notes-on-the-french-translation-process-Stage-area.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-Stage-area.html"
+- "/book/fr/Notes-on-the-french-translation-process-To-stage.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-To-stage.html"
+- "/book/fr/Notes-on-the-french-translation-process-To-unstage.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-To-unstage.html"
+- "/book/fr/Notes-on-the-french-translation-process-Change.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-Change.html"
+- "/book/fr/Notes-on-the-french-translation-process-stash.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-stash.html"
+- "/book/fr/Notes-on-the-french-translation-process-To-stash.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-To-stash.html"
+- "/book/fr/Notes-on-the-french-translation-process-Checksum.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-Checksum.html"
+- "/book/fr/Notes-on-the-french-translation-process-Hash.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-Hash.html"
+- "/book/fr/Notes-on-the-french-translation-process-Workflow.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-Workflow.html"
+- "/book/fr/Notes-on-the-french-translation-process-Snapshot.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-Snapshot.html"
+- "/book/fr/Notes-on-the-french-translation-process-Diff.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-Diff.html"
+- "/book/fr/Notes-on-the-french-translation-process-To-track.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-To-track.html"
+- "/book/fr/Notes-on-the-french-translation-process-untracked.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-untracked.html"
+- "/book/fr/Notes-on-the-french-translation-process-unmodified.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-unmodified.html"
+- "/book/fr/Notes-on-the-french-translation-process-To-update.html"
+- "/book/fr/v1/Notes-on-the-french-translation-process-To-update.html"
 ---
 <h2 id="_résumé_13">Résumé</h2>
 <div class="paragraph">
