--- a/external/book/content/book/fr/v2/Personnalisation-de-Git-Attributs-Git.html
+++ b/external/book/content/book/fr/v2/Personnalisation-de-Git-Attributs-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/fr/v2/Personnalisation-de-Git-Configuration-de-Git
     next: book/fr/v2/Personnalisation-de-Git-Crochets-Git
 title: Git - Attributs Git
+aliases:
+- "/book/fr/Personnalisation-de-Git-Attributs-Git.html"
+- "/book/fr/v1/Personnalisation-de-Git-Attributs-Git.html"
 ---
 <h2 id="_attributs_git">Attributs Git</h2>
 <div class="paragraph">
