--- a/external/book/content/book/fr/v2/Personnalisation-de-Git-Configuration-de-Git.html
+++ b/external/book/content/book/fr/v2/Personnalisation-de-Git-Configuration-de-Git.html
@@ -16,6 +16,11 @@ book:
     previous: book/fr/v2/Utilitaires-Git-Résumé
     next: book/fr/v2/Personnalisation-de-Git-Attributs-Git
 title: Git - Configuration de Git
+aliases:
+- "/book/fr/Personnalisation-de-Git.html"
+- "/book/fr/v1/Personnalisation-de-Git.html"
+- "/book/fr/Personnalisation-de-Git-Configuration-de-Git.html"
+- "/book/fr/v1/Personnalisation-de-Git-Configuration-de-Git.html"
 ---
 <p>Jusqu’ici, nous avons traité les bases du fonctionnement et de l’utilisation de Git et introduit un certain nombre d’outils fournis par Git pour travailler plus facilement et plus efficacement.
 Dans ce chapitre, nous aborderons quelques opérations permettant d’utiliser Git de manière plus personnalisée en vous présentant quelques paramètres de configuration importants et le système d’interceptions.
