--- a/external/book/content/book/fr/v2/Personnalisation-de-Git-Crochets-Git.html
+++ b/external/book/content/book/fr/v2/Personnalisation-de-Git-Crochets-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/fr/v2/Personnalisation-de-Git-Attributs-Git
     next: book/fr/v2/Personnalisation-de-Git-Exemple-de-politique-gérée-par-Git
 title: Git - Crochets Git
+aliases:
+- "/book/fr/Personnalisation-de-Git-Crochets-Git.html"
+- "/book/fr/v1/Personnalisation-de-Git-Crochets-Git.html"
 ---
 <h2 id="s_git_hooks">Crochets Git</h2>
 <div class="paragraph">
