--- a/external/book/content/book/fr/v2/Personnalisation-de-Git-Exemple-de-politique-gérée-par-Git.html
+++ b/external/book/content/book/fr/v2/Personnalisation-de-Git-Exemple-de-politique-gérée-par-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Personnalisation-de-Git-Résumé
 title: Git - Exemple de politique gérée par Git
 url: "/book/fr/v2/Personnalisation-de-Git-Exemple-de-politique-gérée-par-Git.html"
+aliases:
+- "/book/fr/Personnalisation-de-Git-Exemple-de-politique-gérée-par-Git.html"
+- "/book/fr/v1/Personnalisation-de-Git-Exemple-de-politique-gérée-par-Git.html"
 ---
 <h2 id="s_an_example_git_enforced_policy">Exemple de politique gérée par Git</h2>
 <div class="paragraph">
