--- a/external/book/content/book/fr/v2/Utilitaires-Git-Déboguer-avec-Git.html
+++ b/external/book/content/book/fr/v2/Utilitaires-Git-Déboguer-avec-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Utilitaires-Git-Sous-modules
 title: Git - Déboguer avec Git
 url: "/book/fr/v2/Utilitaires-Git-Déboguer-avec-Git.html"
+aliases:
+- "/book/fr/Utilitaires-Git-Deboguer-avec-Git.html"
+- "/book/fr/v1/Utilitaires-Git-Deboguer-avec-Git.html"
 ---
 <h2 id="_déboguer_avec_git">Déboguer avec Git</h2>
 <div class="paragraph">
