--- a/external/book/content/book/fr/v2/Utilitaires-Git-Fusion-avancée.html
+++ b/external/book/content/book/fr/v2/Utilitaires-Git-Fusion-avancée.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Utilitaires-Git-Rerere
 title: Git - Fusion avancée
 url: "/book/fr/v2/Utilitaires-Git-Fusion-avancée.html"
+aliases:
+- "/book/fr/Utilitaires-Git-Fusion-de-sous-arborescences.html"
+- "/book/fr/v1/Utilitaires-Git-Fusion-de-sous-arborescences.html"
 ---
 <h2 id="s_advanced_merging">Fusion avancée</h2>
 <div class="paragraph">
