--- a/external/book/content/book/fr/v2/Utilitaires-Git-Indexation-interactive.html
+++ b/external/book/content/book/fr/v2/Utilitaires-Git-Indexation-interactive.html
@@ -16,6 +16,9 @@ book:
     previous: book/fr/v2/Utilitaires-Git-Sélection-des-versions
     next: book/fr/v2/Utilitaires-Git-Remisage-et-nettoyage
 title: Git - Indexation interactive
+aliases:
+- "/book/fr/Utilitaires-Git-Indexation-interactive.html"
+- "/book/fr/v1/Utilitaires-Git-Indexation-interactive.html"
 ---
 <h2 id="s_interactive_staging">Indexation interactive</h2>
 <div class="paragraph">
