--- a/external/book/content/book/fr/v2/Utilitaires-Git-Remisage-et-nettoyage.html
+++ b/external/book/content/book/fr/v2/Utilitaires-Git-Remisage-et-nettoyage.html
@@ -16,6 +16,9 @@ book:
     previous: book/fr/v2/Utilitaires-Git-Indexation-interactive
     next: book/fr/v2/Utilitaires-Git-Signer-votre-travail
 title: Git - Remisage et nettoyage
+aliases:
+- "/book/fr/Utilitaires-Git-Le-remisage.html"
+- "/book/fr/v1/Utilitaires-Git-Le-remisage.html"
 ---
 <h2 id="s_git_stashing">Remisage et nettoyage</h2>
 <div class="paragraph">
