--- a/external/book/content/book/fr/v2/Utilitaires-Git-Résumé.html
+++ b/external/book/content/book/fr/v2/Utilitaires-Git-Résumé.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Personnalisation-de-Git-Configuration-de-Git
 title: Git - Résumé
 url: "/book/fr/v2/Utilitaires-Git-Résumé.html"
+aliases:
+- "/book/fr/Utilitaires-Git-Résumé.html"
+- "/book/fr/v1/Utilitaires-Git-Résumé.html"
 ---
 <h2 id="_résumé_10">Résumé</h2>
 <div class="paragraph">
