--- a/external/book/content/book/fr/v2/Utilitaires-Git-Réécrire-l’historique.html
+++ b/external/book/content/book/fr/v2/Utilitaires-Git-Réécrire-l’historique.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Utilitaires-Git-Reset-démystifié
 title: Git - Réécrire l’historique
 url: "/book/fr/v2/Utilitaires-Git-Réécrire-l’historique.html"
+aliases:
+- "/book/fr/Utilitaires-Git-Réécrire-l-historique.html"
+- "/book/fr/v1/Utilitaires-Git-Réécrire-l-historique.html"
 ---
 <h2 id="s_rewriting_history">Réécrire l’historique</h2>
 <div class="paragraph">
