--- a/external/book/content/book/fr/v2/Utilitaires-Git-Sous-modules.html
+++ b/external/book/content/book/fr/v2/Utilitaires-Git-Sous-modules.html
@@ -16,6 +16,9 @@ book:
     previous: book/fr/v2/Utilitaires-Git-Déboguer-avec-Git
     next: book/fr/v2/Utilitaires-Git-Empaquetage-bundling
 title: Git - Sous-modules
+aliases:
+- "/book/fr/Utilitaires-Git-Sous-modules.html"
+- "/book/fr/v1/Utilitaires-Git-Sous-modules.html"
 ---
 <h2 id="s_git_submodules">Sous-modules</h2>
 <div class="paragraph">
