--- a/external/book/content/book/fr/v2/Utilitaires-Git-Sélection-des-versions.html
+++ b/external/book/content/book/fr/v2/Utilitaires-Git-Sélection-des-versions.html
@@ -17,6 +17,11 @@ book:
     next: book/fr/v2/Utilitaires-Git-Indexation-interactive
 title: Git - Sélection des versions
 url: "/book/fr/v2/Utilitaires-Git-Sélection-des-versions.html"
+aliases:
+- "/book/fr/Utilitaires-Git.html"
+- "/book/fr/v1/Utilitaires-Git.html"
+- "/book/fr/Utilitaires-Git-Sélection-des-versions.html"
+- "/book/fr/v1/Utilitaires-Git-Sélection-des-versions.html"
 ---
 <p>À présent, vous avez appris les commandes et modes de fonctionnement usuels requis pour gérer et maintenir un dépôt Git pour la gestion de votre code source.
 Vous avez déroulé les routines de suivi et de validation de fichiers, vous avez exploité la puissance de l’index, de la création et de la fusion de branches locales de travail.</p><p>Maintenant, vous allez explorer un certain nombre de fonctionnalités particulièrement efficaces, fonctionnalités que vous utiliserez moins souvent mais dont vous pourriez avoir l’usage à un moment ou à un autre.</p>
