--- a/external/book/content/book/fr/v2/Démarrage-rapide-Installation-de-Git.html
+++ b/external/book/content/book/fr/v2/Démarrage-rapide-Installation-de-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Démarrage-rapide-Paramétrage-à-la-première-utilisation-de-Git
 title: Git - Installation de Git
 url: "/book/fr/v2/Démarrage-rapide-Installation-de-Git.html"
+aliases:
+- "/book/fr/Démarrage-rapide-Installation-de-Git.html"
+- "/book/fr/v1/Démarrage-rapide-Installation-de-Git.html"
 ---
 <h2 id="_installation_de_git">Installation de Git</h2>
 <div class="paragraph">
