--- a/external/book/content/book/fr/v2/Démarrage-rapide-Une-rapide-histoire-de-Git.html
+++ b/external/book/content/book/fr/v2/Démarrage-rapide-Une-rapide-histoire-de-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Démarrage-rapide-Rudiments-de-Git
 title: Git - Une rapide histoire de Git
 url: "/book/fr/v2/Démarrage-rapide-Une-rapide-histoire-de-Git.html"
+aliases:
+- "/book/fr/Démarrage-rapide-Une-rapide-histoire-de-Git.html"
+- "/book/fr/v1/Démarrage-rapide-Une-rapide-histoire-de-Git.html"
 ---
 <h2 id="_une_rapide_histoire_de_git">Une rapide histoire de Git</h2>
 <div class="paragraph">
