--- a/external/book/content/book/fr/v2/Git-distribué-Résumé.html
+++ b/external/book/content/book/fr/v2/Git-distribué-Résumé.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/GitHub-Configuration-et-paramétrage-d’un-compte
 title: Git - Résumé
 url: "/book/fr/v2/Git-distribué-Résumé.html"
+aliases:
+- "/book/fr/Git-distribué-Résumé.html"
+- "/book/fr/v1/Git-distribué-Résumé.html"
 ---
 <h2 id="_résumé_7">Résumé</h2>
 <div class="paragraph">
