--- a/external/book/content/book/fr/v2/Les-bases-de-Git-Démarrer-un-dépôt-Git.html
+++ b/external/book/content/book/fr/v2/Les-bases-de-Git-Démarrer-un-dépôt-Git.html
@@ -17,6 +17,11 @@ book:
     next: book/fr/v2/Les-bases-de-Git-Enregistrer-des-modifications-dans-le-dépôt
 title: Git - Démarrer un dépôt Git
 url: "/book/fr/v2/Les-bases-de-Git-Démarrer-un-dépôt-Git.html"
+aliases:
+- "/book/fr/Les-bases-de-Git.html"
+- "/book/fr/v1/Les-bases-de-Git.html"
+- "/book/fr/Les-bases-de-Git-Démarrer-un-dépôt-Git.html"
+- "/book/fr/v1/Les-bases-de-Git-Démarrer-un-dépôt-Git.html"
 ---
 <p>Si vous ne deviez lire qu’un chapitre avant de commencer à utiliser Git, c’est celui-ci.
 Ce chapitre couvre les commandes de base nécessaires pour réaliser la vaste majorité des activités avec Git.
