--- a/external/book/content/book/fr/v2/Les-bases-de-Git-Les-alias-Git.html
+++ b/external/book/content/book/fr/v2/Les-bases-de-Git-Les-alias-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/fr/v2/Les-bases-de-Git-Étiquetage
     next: book/fr/v2/Les-bases-de-Git-Résumé
 title: Git - Les alias Git
+aliases:
+- "/book/fr/Les-bases-de-Git-Trucs-et-astuces.html"
+- "/book/fr/v1/Les-bases-de-Git-Trucs-et-astuces.html"
 ---
 <h2 id="s_git_aliases">Les alias Git</h2>
 <div class="paragraph">
