--- a/external/book/content/book/fr/v2/Personnalisation-de-Git-Résumé.html
+++ b/external/book/content/book/fr/v2/Personnalisation-de-Git-Résumé.html
@@ -17,6 +17,9 @@ book:
     next: book/fr/v2/Git-et-les-autres-systèmes-Git-comme-client
 title: Git - Résumé
 url: "/book/fr/v2/Personnalisation-de-Git-Résumé.html"
+aliases:
+- "/book/fr/Personnalisation-de-Git-Résumé.html"
+- "/book/fr/v1/Personnalisation-de-Git-Résumé.html"
 ---
 <h2 id="_résumé_11">Résumé</h2>
 <div class="paragraph">
