--- a/external/book/content/book/fr/v2/_index.html
+++ b/external/book/content/book/fr/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/fr/v2.html"
 aliases:
 - "/book/fr/v2/index.html"
+- "/book/fr/v1/index.html"
 - "/book/fr/index.html"
 ---
